@@ -18,7 +18,6 @@ import com.microsoft.typespec.http.client.generator.mgmt.model.clientmodel.fluen
 import com.microsoft.typespec.http.client.generator.mgmt.util.FluentUtils;
 import com.microsoft.typespec.http.client.generator.mgmt.util.Utils;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 import org.slf4j.Logger;
@@ -36,7 +35,7 @@ public class ResourceDelete extends ResourceOperation {
 
     @Override
     public List<FluentMethod> getFluentMethods() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     @Override
